--- a/package.json
+++ b/package.json
@@ -21,10 +21,18 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geofence": "^5.8.0",
+    "@ionic-native/geolocation": "^5.8.0",
+    "@ionic-native/native-geocoder": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "angularfire2": "^5.2.1",
+    "cordova-plugin-geofence": "^0.7.0",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-nativegeocoder": "^3.2.2",
     "core-js": "^2.5.4",
+    "firebase": "^6.2.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -56,5 +64,12 @@
     "tslint": "~5.17.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-geofence": {}
+    }
+  }
 }
