--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geofence": "^5.8.0",
     "@ionic-native/geolocation": "^5.8.0",
+    "@ionic-native/google-maps": "^5.5.0",
     "@ionic-native/native-geocoder": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -30,6 +31,7 @@
     "angularfire2": "^5.2.1",
     "cordova-plugin-geofence": "^0.7.0",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-googlemaps": "^2.6.2",
     "cordova-plugin-nativegeocoder": "^3.2.2",
     "core-js": "^2.5.4",
     "firebase": "^6.2.0",
@@ -69,7 +71,10 @@
     "plugins": {
       "cordova-plugin-geolocation": {},
       "cordova-plugin-nativegeocoder": {},
-      "cordova-plugin-geofence": {}
+      "cordova-plugin-geofence": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyC5Ngi-i6MaMl-im8VQjokyMbCwfuxbp-g"
+      }
     }
   }
 }
