--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/geofence": "^5.8.0",
+    "@ionic-native/core": "^5.8.0",
     "@ionic-native/geolocation": "^5.8.0",
     "@ionic-native/google-maps": "^5.5.0",
     "@ionic-native/native-geocoder": "^5.8.0",
@@ -29,11 +28,21 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "angularfire2": "^5.2.1",
-    "cordova-plugin-geofence": "^0.7.0",
+    "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-add-swift-support": "^1.6.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.6.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.1.0",
     "cordova-plugin-nativegeocoder": "^3.2.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "^4.2.2",
     "firebase": "^6.2.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -71,10 +80,22 @@
     "plugins": {
       "cordova-plugin-geolocation": {},
       "cordova-plugin-nativegeocoder": {},
-      "cordova-plugin-geofence": {},
       "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyC5Ngi-i6MaMl-im8VQjokyMbCwfuxbp-g"
-      }
-    }
+        "API_KEY_FOR_ANDROID": "AIzaSyC5Ngi-i6MaMl-im8VQjokyMbCwfuxbp-g",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
